# algorithms_and_data_structures

./: .gitignore  CMakeLists.txt
include/: common_header.h  stack.h
list/: P18.cpp
pat_code/advanced_level/: a1001.cpp  a1002.cpp  a1003.cpp  a1004.cpp  a1005.cpp  a1006.cpp  a1007.cpp  a1009.cpp  a1010.cpp  a1011.cpp  a1013.cpp  a1014.cpp  a1015.cpp  a1016.cpp  a1017.cpp  a1019.cpp  a1020.cpp  a1021.cpp  a1022.cpp  a1023.cpp  a1024.cpp  a1025.cpp  a1026.cpp  a1027.cpp
pat_code/basic_level/: 1001.cpp  1002.cpp  1003.cpp  1004.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1010.cpp  1011.cpp  1012.cpp  1013.cpp  1014.cpp  1015.cpp  1016.cpp  1017.cpp  1018.cpp  1019.cpp  1020.cpp  1021.cpp  1022.cpp  1023.cpp  1024.cpp  1024_with_stack.cpp  1025.cpp  1026.cpp  1028.cpp  1030.cpp
stack/: sq_stack_main.cpp
